--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,12 @@ label {
 
 #sightingsGrid {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
+	flex-wrap:wrap;
+	flex-direction: row;
+	justify-content: space-evenly;  
+}
+
+.flexItem {
+	flex-grow: 3;
+	flex-direction: row;
 }
